Add Index page, Libraries, CSS

--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Pixel 2.0</title>
-	<link rel="SHORTCUT ICON" href="../../assets/favicon.png">
-	<link rel="stylesheet" href="../../stylesheets/style.css">
+	<link rel="SHORTCUT ICON" href="icon.png">
+	<link rel="stylesheet" href="style.css">
 
-	<script language="javascript" src="../../lib/dat.gui/dat.gui.min.js"></script>
+	<script language="javascript" src="lib/dat.gui/dat.gui.min.js"></script>
 </head>
 <body>
-	<div>
-		<a href="../../index.html">
-			<h1 class="name">← Back</h1>
-		</a>
-	</div>
-
-	<section id="pixel" class="container canvas-container">
+	<section id="pixel" class="canvas-container">
 		<!-- <canvas id="canvas"></canvas> -->
 		<div id="canvas"></div>
 	</section>
